--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "PREFIX": {
       "description": "Enter Prefix For Commands Use Emojis Also",
       "required": false,
-      "value": "!"
+      "value": "."
     },
     "SUDO": {
       "description": "Enter Numbers With Country Code Without + Separated With , To Add More Numbers",
